--- a/ClientApp/src/app/home/home.component.scss
+++ b/ClientApp/src/app/home/home.component.scss
@@ -43,6 +43,7 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
+  background-color: #F7F7F7;
 }
 
 
@@ -82,6 +83,10 @@
   display: flex;
   flex-direction: column;
   background: #f0eeee;
+
+  -webkit-border-top-left-radius: 20px;
+  -moz-border-radius-topleft: 20px;
+  border-top-left-radius: 20px;
 }
 
 
