--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,12 +1,46 @@
-<div class="nav-menu">
-  <div class="cyan brackets">
-    <a [routerLink]='["/"]'>HOME</a>
-    <a>ARTICLES</a>
-    <a>PORTFOLIO</a>
-    <a>ABOUT</a>
-    <a>CONTACT</a>
-    <a [routerLink]='["/add-article"]'>ADD ARTICLES</a>
-    <a style="float: right" (click)="logOut();">Log Out</a>
+<!--<div class="nav-menu">-->
+  <!--<div class="cyan brackets">-->
+    <!--<a [routerLink]='["/"]'>HOME</a>-->
+    <!--<a>ARTICLES</a>-->
+    <!--<a>PORTFOLIO</a>-->
+    <!--<a>ABOUT</a>-->
+    <!--<a>CONTACT</a>-->
+    <!--<a [routerLink]='["/add-article"]'>ADD ARTICLES</a>-->
+    <!--<a style="float: right" (click)="logOut();">Log Out</a>-->
 
+  <!--</div>-->
+<!--</div>-->
+
+
+<div class="nav">
+  <div class="nav-header">
+    <div [routerLink]='["/"]' class="nav-title">
+      Classico<img src="../../assets/icons/football.svg" width="10">ge
+    </div>
+  </div>
+  <div class="nav-btn">
+    <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+  </div>
+  <input type="checkbox" id="nav-check">
+  <div class="nav-links">
+    <a [routerLink]='["/"]'>Main</a>
+    <a href="#">Leagues&Cups</a>
+    <a href="#">Teams</a>
+    <a href="#" target="_blank">Scores</a>
+  </div>
+  <div class="profile-button">
+    <img (click)="dropdownvisible = !dropdownvisible" src="https://e0.365dm.com/18/11/768x432/skysports-arthur-melo-arthur_4493328.jpg?20181120140154" (offClick)="disableSearch($event)" appOutclick>
+    <div [ngClass]="{'show-drop-down': dropdownvisible}" class="dropdown-content" id="myDropdown">
+      <a href="#">Profile</a>
+      <a [routerLink]='["/add-article"]'>Add Article</a>
+      <a (click)="logOut();">Log Out</a>
+    </div>
   </div>
 </div>
+
+
+
