updating user page in angular side

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="wrap" xmlns="http://www.w3.org/1999/html">
+<div class="wrap">
   <div class="nav-bar">
     <app-nav-menu></app-nav-menu>
   </div>
