--- a/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -97,6 +97,10 @@
   margin-left: 20px;
 }
 
+.profile-photo {
+
+}
+
 .nav > .nav-header > .nav-title {
   border: none;
   outline:none;
@@ -157,10 +161,10 @@
 
 .dropdown-content {
   display: none;
+  background-color: #F7F7F7;
   position: absolute;
   right: 20px;
   margin-top: 5px;
-  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -172,7 +176,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: right;
+  text-align: left;
 }
 
 .dropdown-content a:hover {
