--- a/ClientApp/src/app/sources/style/card.scss
+++ b/ClientApp/src/app/sources/style/card.scss
@@ -49,6 +49,7 @@
     display: block;
     width:60%;
     //float:left;
+    overflow: hidden;
     flex: 2;
     order: 2;
     //background:#EEF4F2;
